--- a/snippets/product-all-in-one-thirty-day-money-back.liquid
+++ b/snippets/product-all-in-one-thirty-day-money-back.liquid
@@ -1,6 +1,6 @@
 <section class="free-shipping-section">
-  
-  <img src="{{ "thirty-day-product-money-back-icon.png" | asset_url }}" width="2085" height="288" alt="" class="free-shipping-line" loading="lazy">
+  <div class="trust-badge"><i class="icofont-badge" style="font-size:36px"></i>60 Day Money Back Guarantee</div>
+  {% comment %} <img src="{{ "thirty-day-product-money-back-icon.png" | asset_url }}" width="2085" height="288" alt="" class="free-shipping-line" loading="lazy"> {% endcomment %}
 </section>
 
 
@@ -13,6 +13,14 @@
   }
   .free-shipping-section img {
     max-width: 40%;
+  }
+
+  .free-shipping-section .trust-badge {
+    
+  }
+
+  .free-shipping-section .icofont-badge {
+
   }
   @media screen and (max-width: 768px) {
      .free-shipping-section img {
