--- a/snippets/product-all-in-one-thirty-day-money-back.liquid
+++ b/snippets/product-all-in-one-thirty-day-money-back.liquid
@@ -1,5 +1,5 @@
 <section class="free-shipping-section">
-  <div class="trust-badge"><i class="icofont-badge" style="font-size:36px"></i>60 Day Money Back Guarantee</div>
+  <div class="trust-badge"><i class="icofont-badge"></i>60 Day Money Back Guarantee</div>
   {% comment %} <img src="{{ "thirty-day-product-money-back-icon.png" | asset_url }}" width="2085" height="288" alt="" class="free-shipping-line" loading="lazy"> {% endcomment %}
 </section>
 
@@ -16,7 +16,7 @@
   }
 
   .free-shipping-section .trust-badge {
-    
+    font-size: clamp(36px, 4vw, 120px);
   }
 
   .free-shipping-section .icofont-badge {
