--- a/snippets/product-all-in-one-thirty-day-money-back.liquid
+++ b/snippets/product-all-in-one-thirty-day-money-back.liquid
@@ -17,6 +17,7 @@
 
   .free-shipping-section .trust-badge {
     font-size: clamp(36px, 4vw, 120px);
+    color: #404733;
   }
 
   .free-shipping-section .icofont-badge {
