--- a/snippets/product-all-in-one-thirty-day-money-back.liquid
+++ b/snippets/product-all-in-one-thirty-day-money-back.liquid
@@ -13,14 +13,21 @@
   }
 
   .free-shipping-section .trust-badge {
-    font-size: clamp(30px, 4vw, 120px);
+    font-family: 'Roboto';
+    font-weight: 600;
+    font-size: 27px;
+    line-height: 33px;
+    text-transform: uppercase;
     color: #404733;
+
   }
 
   @media screen and (max-width: 768px) {
     .free-shipping-section .trust-badge {
       text-align: center;
       padding: 0 5vw;
+      font-size: 18px;
+      line-height: 22px;
     }
 
   }
