--- a/snippets/product-all-in-one-thirty-day-money-back.liquid
+++ b/snippets/product-all-in-one-thirty-day-money-back.liquid
@@ -1,4 +1,4 @@
-<section class="free-shipping-section">
+<section class="money-back-section">
   <div class="trust-badge"><i class="icofont-badge"></i>60 Day Money Back Guarantee</div>
  
 </section>
@@ -7,12 +7,12 @@
 
 
 <style>
-  .free-shipping-section {
+  .money-back-section {
     display: flex;
     justify-content: center;
   }
 
-  .free-shipping-section .trust-badge {
+  .money-back-section .trust-badge {
     font-family: 'Roboto';
     font-weight: 600;
     font-size: 27px;
@@ -23,7 +23,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .free-shipping-section .trust-badge {
+    .money-back-section .trust-badge {
       text-align: center;
       padding: 0 3vw;
       font-size: 18px;
