--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -11,7 +11,7 @@
 |thirty-day-accepted-03.png*Do you have the motivation to change your life?
 ' | split: '|' %}
 
-{% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#404733", logoFileName: "logo-white-black-friday.png" %}
+{% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "30 Days to Sweet Success: ", subTitle: "A Blood Sugar Challenge", textHero: "Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way." %}
 {% render 'thirty-day-challenge-say-goodby-section' %}
 {% render 'thirty-day-break-it-down' %}
