--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -12,7 +12,8 @@
 ' | split: '|' %}
 
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
-{% render 'thirty-day-challenge-hero-banner', mainTitle: "30 Days to Sweet Success: ", subTitle: "A Blood Sugar Challenge", textHero: "Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way." %}
+{% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin+: ", subTitle: "Freebies to kick-off
+the year right! ", textHero: "Exclusive for existing Curalife customers!", isSecondLP: true %}
 {% render 'thirty-day-challenge-say-goodby-section' %}
 {% render 'thirty-day-break-it-down' %}
 {% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Sweeter days ahead" %}
