--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -12,7 +12,7 @@
 ' | split: '|' %}
 
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
-{% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin+: ", subTitle: "Freebies to kick-off
+{% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off
 the year right! ", textHero: "Exclusive for existing Curalife customers!", isSecondLP: true %}
 {% render 'thirty-day-challenge-say-goodby-section' %}
 {% render 'thirty-day-break-it-down' %}
