--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="hero-banner-content">
         <div class="text-button">
-          <div class="main-title">{{ mainTitle }}</div>
+          <div class="main-title">{{ mainTitle }} {% if isSecondLP %} <span class="plus">+</span> </div>
           <div class="subtitle">{{ subTitle }}</div>
           <div class="text-hero">{{ textHero }} </div>
         </div>
