--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -53,6 +53,10 @@
       font-size: clamp(40px, 5vw, 115px);
       padding: 40px 0px 0px 90px;
   }
+
+  .hero-banner-content .text-button .main-title.plus {
+    color: #404733;
+  }
     .hero-banner-content .text-button .subtitle {
       padding-left: 85px;
       color: var(--dark-green);
