--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -56,6 +56,11 @@
 
    .plus {
     color: #404733;
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 45px;
+    letter-spacing: -0.02em;
   }
     .hero-banner-content .text-button .subtitle {
       padding-left: 85px;
@@ -112,6 +117,11 @@
         padding: unset;
         text-align: center;
         
+      }
+
+      .plus {
+        font-size: 25px;
+        line-height: 28px;
       }
   
       .hero-banner-content .text-button .subtitle {
