--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -50,7 +50,7 @@
       color: #FFF1E8;
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
-      font-size: clamp(40px, 5vw, 115px);
+      font-size: {% if isSecondLP %} clamp(43px, 4vw, 75px){% else %} clamp(40px, 5vw, 115px){% endif %};
       padding: 40px 0px 0px 90px;
   }
 
