--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -119,6 +119,10 @@
         
       }
 
+      .plus {
+        top:0;
+      }
+
       .hero-banner-content .text-button .subtitle {
         padding-top: unset;
         padding-left: unset;
