--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -64,11 +64,11 @@
   }
     .hero-banner-content .text-button .subtitle {
       padding-left: 85px;
-      color: var(--dark-green);
+      color: {% if isSecondLP %}#ffffff{% else %} var(--dark-green){% endif %};
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
       font-size: clamp(26px, 7vw, 62px);
-      
+      {% if isSecondLP %}letter-spacing: -0.02em{% endif %};
     }
   
     .hero-banner-content .text-button .text-hero {
