--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -55,7 +55,7 @@
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
       font-size: {% if isSecondLP %} clamp(43px, 2vw, 75px){% else %} clamp(40px, 5vw, 115px){% endif %};
-      padding: 40px 0px 0px 90px;
+      padding: {% unless isSecondLP %} 40px 0px 0px 90px {% endunless %};
   }
 
    .plus {
@@ -67,7 +67,7 @@
     top: 0.5rem;
   }
     .hero-banner-content .text-button .subtitle {
-      padding-left: 85px;
+      padding-left: {% unless isSecondLP %}85px {% endunless %};
       color: {% if isSecondLP %}#ffffff{% else %} var(--dark-green){% endif %};
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
