--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -95,7 +95,14 @@
     }
 
     .bottom-text{
-
+      background: linear-gradient(90deg, #F9D3C9 45.73%, rgba(255, 219, 209, 0) 86.11%);
+      opacity: 0.5;
+      font-family: 'PP Radio Grotesk';
+      font-weight: 700;
+      font-size: clamp(27px, 3vw, 50px);
+      letter-spacing: -0.02em;
+      color: #404733;
+      margin: 20px auto;
     }
   
   
@@ -169,6 +176,10 @@
   
       .hero-banner-content .text-button {
         margin-left: unset;
+      }
+
+      .bottom-text {
+        line-height: 26px;
       }
   
     
