--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -95,14 +95,15 @@
     }
 
     .bottom-text{
-      background: linear-gradient(90deg, #F9D3C9 45.73%, rgba(255, 219, 209, 0) 86.11%);
+      background-color: linear-gradient(90deg, #F9D3C9 45.73%, rgba(255, 219, 209, 0) 86.11%);
       opacity: 0.5;
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
       font-size: clamp(27px, 3vw, 50px);
       letter-spacing: -0.02em;
       color: #404733;
-      margin: 20px auto;
+      display: flex;
+      justify-content: center;
     }
   
   
