--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -13,7 +13,7 @@
 
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off
-the year right! ", textHero: "Exclusive for existing Curalife customers!", isSecondLP: true %}
+the year right! ", isSecondLP: true %}
 {% render 'thirty-day-challenge-say-goodby-section' %}
 {% render 'thirty-day-break-it-down' %}
 {% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Sweeter days ahead" %}
