--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -97,7 +97,7 @@
     }
 
     .bottom-text{
-      background-color: linear-gradient(90deg, #F9D3C9 45.73%, rgba(255, 219, 209, 0) 86.11%);
+      background-image: linear-gradient(90deg, #F9D3C9 45.73%, rgba(255, 219, 209, 0) 86.11%);
       opacity: 0.5;
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
