--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -51,6 +51,7 @@
    
   
     .hero-banner-content .text-button {
+      padding-top: {% if isSecondLP %}90px{% endif %};
       display: flex;
       flex-direction: column;
       min-width: 66%;
