--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -137,6 +137,10 @@
       .hero-banner-content {
         display: block;
       }
+
+      .hero-banner-content .text-button {
+        padding-top: unset;
+      }
   
       .hero-banner-content .text-button .main-title {
         padding: unset;
