--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -65,6 +65,10 @@
       padding: {% unless isSecondLP %} 40px 0px 0px 90px {% endunless %};
   }
 
+  .title-img{
+    max-width: 70%;
+  }
+
    .plus {
     color: #404733;
     font-family: 'PP Radio Grotesk';
@@ -150,6 +154,7 @@
       }
 
       .title-img{
+        max-width: unset;
         margin: auto;
       }
 
