--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -154,8 +154,7 @@
       }
 
       .title-img{
-        max-width: unset;
-        margin: auto;
+        margin: 1vw auto;
       }
 
       .plus {
