--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -137,6 +137,7 @@
   
     @media screen and (max-width: 768px) {
       .hero-banner {
+        height: {% if isSecondLP %} 100vh {% endif %};
         text-align: center;
   
       }
