--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -188,7 +188,7 @@
       .hero-banner .main-img-mb {
         display: block;
         position: absolute;
-        top:  10vw;
+        top: {% if isSecondLP %}42vw {% else %} 10vw {% endif %};
         width: 100%;
       }
   
