--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -14,8 +14,7 @@
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off
 the year right! ", isSecondLP: true %}
-{% render 'thirty-day-challenge-say-goodby-section' %}
-{% render 'thirty-day-break-it-down' %}
+{% render 'thirty-day-break-it-down', isSecondLP: true %}
 {% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Sweeter days ahead" %}
 {% render 'thirty-day-challenge-section' ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!" %}
 {% comment %} {% render 'thirty-day-video-reviews', maintitle: 'Real results from real people', ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!" %} {% endcomment %}
