--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -15,10 +15,9 @@
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off
 the year right! ", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', isSecondLP: true %}
-{% render 'product-all-in-one-easy' %}
+{% render 'product-all-in-one-easy', isSecondLP: true %}
 {% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Sweeter days ahead" %}
 {% render 'thirty-day-challenge-section' ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!" %}
-{% render 'product-all-in-one-easy' %}
 {% render 'lps-video-reviews', maintitle: 'Customers Reviews Of CuraLin' %}
 {% render 'thirty-day-challenge-is-for-you', challenges: challenges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Challenge Accepted!" %}
 {% render 'thirty-day-commitement' %}
