--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -14,6 +14,6 @@
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off
 the year right! ", isSecondLP: true %}
-{% render 'thirty-day-break-it-down', isSecondLP: true %}
+{% render 'thirty-day-break-it-down', mainTitle: "Let’s break it down:", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
 {% render 'lps-video-reviews', maintitle: 'Customers Reviews Of CuraLin' %}
