--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -6,7 +6,7 @@
 
 <section class="timeline">
 <div class="container">
-  <div class="break-it">Let’s break it down:</div>
+  <div class="break-it">{{ mainTitle }}</div>
  
     <ul>
       {% for week in weeks %}
