--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -4,6 +4,14 @@
 |Finding the balance between food, movement and supplements! We're here to cheer you on!
 " | split: "|" %}
 
+{% assign weeks_1 = "Curalin*Continue with Curalin as part of your daily regime. We’ll guide you through it every step of the way whenever needed.
+|Smart 
+Meal plan*Access your new meal plan with tons of new recipes that don’t compromise flavor!
+|Find your Flow*A movement routine that works for YOU! Go at your own pace, from the comfortability of your home. It’s doable, maintainable, and even enjoyable!
+|Small Steps
+Big Wins*Set yourself up for success! Have all the support you need from peers and our team of consultants!
+" | split: "|" %}
+
 <section class="timeline">
 <div class="container">
   <div class="break-it">{{ mainTitle }}</div>
