--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -163,6 +163,16 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
     justify-content: space-around;
   }
 
+
+  .time-title {
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 52px;
+    letter-spacing: -0.01em;
+    color: #B9C86B;
+  }
+
   .time-desc {
     font-family: 'DM Sans';
     font-weight: 400;
@@ -175,6 +185,12 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
   @media screen and (max-width: 768px) {
     .break-it-wrapper {
       flex-direction: column;
+    }
+
+
+    .time-title {
+      font-size: 35px;
+      line-height: 30px;
     }
 
     .time-desc {
