--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -320,7 +320,7 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
 
     }
 
-    .time-and-text .border-bottom {
+    .border-bottom {
       border-bottom: 2px solid #B9C86B;
       padding-top: 20px;
       max-width: 122px;
