--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -465,7 +465,7 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
         line-height: 30px;
       }
 
-      .time-and-text .border-bottom {
+       .border-bottom {
         max-width: 30vw;
       }
 
