--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -196,6 +196,7 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
     .time-desc {
       font-size: 20px;
       line-height: 24px;
+      padding: 4vw 0;
     }
   }
  </style>
