--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -160,7 +160,8 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
  <style>
   .break-it-wrapper {
     display: flex;
-    justify-content: space-around;
+    gap: 4vw;
+    padding: 30px 0;
   }
 
 
