--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -164,6 +164,10 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
     padding: 30px 0;
   }
 
+  .time-wrapper {
+    min-width: 30%;
+  }
+
 
   .time-title {
     font-family: 'PP Radio Grotesk';
