--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -172,8 +172,7 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
   .time-title {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 60px;
-    line-height: 52px;
+    font-size: clamp(30px, 3vw, 60px);
     letter-spacing: -0.01em;
     color: #B9C86B;
   }
@@ -194,7 +193,6 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
 
 
     .time-title {
-      font-size: 35px;
       line-height: 30px;
     }
 
