--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -180,8 +180,7 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
   .time-desc {
     font-family: 'DM Sans';
     font-weight: 400;
-    font-size: 30px;
-    line-height: 34px;
+    font-size: clamp(20px, 2vw, 34px);
     color: #FFFFFF;
   }
 
@@ -197,7 +196,6 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
     }
 
     .time-desc {
-      font-size: 20px;
       line-height: 24px;
       padding: 4vw 0;
     }
