--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -235,6 +235,10 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
     padding: 50px 0 0 !important;
  }
 
+ .timeline .container {
+  padding-bottom: {% if isSecondLP %}40px{% endif %};
+ }
+
  .timeline .break-it {
     display: flex;
     justify-content: center;
@@ -423,6 +427,9 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
 
 
     @media screen and (max-width: 768px) {
+      .timeline .container {
+       padding-bottom: unset;
+      }
       .bottom-line-horizontal {
         display: none;
       }
