--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -160,7 +160,8 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
  <style>
   .break-it-wrapper {
     display: flex;
-    padding: 30px 0;
+    gap: 5%;
+    padding: 30px 100px;
   }
 
   .time-wrapper {
@@ -187,6 +188,7 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
   @media screen and (max-width: 768px) {
     .break-it-wrapper {
       flex-direction: column;
+      padding: 30px 20px;
     }
 
 
