--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -91,6 +91,14 @@
            text-align: center;
          }
 
+
+         @media screen and (max-width: 1000px) {
+          .price-today sup {
+                  top: -12px;
+                  right: 9px;
+              }
+         }
+
          @media screen and (max-width: 768px) {
          .price-today sup {
            top: -11px; 
