--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -89,6 +89,7 @@
     margin-bottom: 20px;
     max-width: 430px;   
     margin: 0 auto;
+    max-height: 60px;
   }
 
   #challenge-features-section .cta-btn:hover {
