--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,6 +1,6 @@
 <section id="challenge-features-section">
   <div class="container">
-    <h3>Everything you need</h3>
+    <h3>{{ mainTitle }}</h3>
     <div class="maintained">to keep your blood sugar maintained:</div>
 
     <div class="features-wrapper">
