--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -14,7 +14,8 @@
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off
 the year right! ", isSecondLP: true %}
-{% render 'thirty-day-challenge-section' ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!", isSecondLP: true %}
+{% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin
+you GET", ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
 {% render 'lps-video-reviews', maintitle: 'Customers Reviews Of CuraLin' %}
