--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -40,7 +40,7 @@
     margin: 0 auto;
     z-index: 0;
     position: relative;
-    width: fit-content;
+    width: {% if isSecondLP %}56%{% else %}fit-content{% endif %};
   }
 
   #challenge-features-section .maintained {
@@ -108,6 +108,7 @@
     #challenge-features-section h3 {
       font-size: 32px;
       line-height: 35px;
+      width: {% if isSecondLP %}unset{% endif %};
     }
 
     #challenge-features-section .maintained {
