--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -41,6 +41,7 @@
     z-index: 0;
     position: relative;
     width: {% if isSecondLP %}57%{% else %}fit-content{% endif %};
+    padding-bottom: {% if isSecondLP %}30px{% endif %};
   }
 
   #challenge-features-section .maintained {
@@ -109,6 +110,7 @@
       font-size: 32px;
       line-height: 35px;
       width: {% if isSecondLP %}unset{% endif %};
+      padding-bottom: {% if isSecondLP %}unset{% endif %};
     }
 
     #challenge-features-section .maintained {
