--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -6,7 +6,11 @@
     {% endunless %}
 
     <div class="features-wrapper">
+      {% if isSecondLP %}
+      <img class="main-image" src="{{ 'lp02-challenge-section-main-img.png' | asset_url }}" width="802" height="679" alt="">
+      {% else %}
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
+      {% endif %}
       <div class="features-wrap">
         {% render 'features-list', product: all_products["30-day-blood-sugar-challenge-pp"], isTotal: true, isLP: true %}
       </div>
