--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -18,4 +18,4 @@ the year right! ", isSecondLP: true %}
 you GET", ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
-{% render 'lps-video-reviews', maintitle: 'Customers Reviews Of CuraLin' %}
+{% render 'lps-video-reviews', maintitle: 'This helped me like nothing else did' %}
