--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,7 +1,9 @@
-{% assign features = 'thirty-day-challenge-what-is-for-you-01.png*Maintain Glucose:Supporting your overall health, mobility, and mood!
-|thirty-day-challenge-what-is-for-you-02.png*Feel better:You’ll feel <b> and </b> look great!
-|thirty-day-challenge-what-is-for-you-03.png*Get energy:You have <b> energy </b> to go the extra mile in your life!
-|thirty-day-challenge-what-is-for-you-04.png*Enjoy food:You won’t dread healthy cooking. You’ll <b> enjoy </b> it!
+{% assign features = 'Curalin*
+|<b>96 delicious recipes</b>
+organized into weekly plans*lp02-challenge-section-free.png
+|<b>23 easy-to-do movement and exercise videos</b> at your level*lp02-challenge-section-free.png
+|Free Shipping*
+|<b>24/7 Customer Support </b>(phone, email, or live chat)*
 ' | split: '|' %}
 
 
