--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -8,9 +8,8 @@
       <div class="feature-icon"><i class="icofont-check"></i></div>
       <div class="text-features">     
         <div class="feature-text">{{ feature | split: "*" | first }}</div>
-        <div class="feature-text">{{ feature | split: "*" | last }}</div>   
-      </div>
-     
+        <div class="feature-text">{{ feature | asset_url | split: "*" | last }}</div>   
+      </div>     
     </div>
   {% endfor %}
   {% else %}
