--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -8,7 +8,7 @@
       <div class="feature-icon"><i class="icofont-check"></i></div>
       <div class="text-features">     
         <div class="feature-text">{{ feature | split: "*" | first }}</div>
-        <img src="{{ feature | asset_url | split: "*" | last }}" width="114" height="114" alt="free">
+        <img class="feature-img" src="{{ feature | asset_url | split: "*" | last }}" width="114" height="114" alt="free">
       </div>     
     </div>
   {% endfor %}
